--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      color:rgb(132, 178, 26);
     }
 .p_img{
-     width: 130px;
-    height: 140px;
+     width: 140px;
+    height: 150px;
     display: block;
     margin:10px auto;
     border-radius: 10px;
@@ -23,11 +23,11 @@
     margin: 10px auto;
     }
 .p-card{
-    background-color:beige;
+    background-color:antiquewhite;
     width: 180px;
     padding:10px 5px;
     border-radius: 10px;
-    border:3px double rgb(207, 178, 141);
+    border:3px double rgb(212, 198, 178);
     margin:20px;
     }
 p{
@@ -45,7 +45,7 @@ b{
 <body>
 <h1> Womens Sarees</h1>
 <div class="p-card">
-     <img src="./sarees.jpg" class="p_img" >
+     <img src="./images/sarees.jpg" class="p_img" >
      <p> Womens Sarees</p>
      <p><b>Price:</b> 3999</p>
      <div class="quantity-btn-container">
